// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render empty 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Header)
    productId="foo"
    rating={
      {
        "average": 0,
        "count": 0,
      }
    }
  >
    <Header
      dispatch={[Function]}
      productId="foo"
      rating={
        {
          "average": 0,
          "count": 0,
        }
      }
      withTopGap={false}
    >
      <NoReviews
        productId="foo"
      >
        <div
          className="sg-1p31f2r-container"
        >
          <AverageRating
            average={0}
            count={0}
            productId="foo"
          >
            <Link
              className="sg-16m0zyl-container"
              data-test-id="ratedStarsAverage"
              disabled={false}
              href="/item/666f6f/write_review"
              itemProp="item"
              itemScope={true}
              itemType="http://schema.org/Review"
              role="text"
              tagName="a"
            >
              <RatingStars
                className=""
                display="large"
                isSelectable={false}
                onSelection={[Function]}
                value={0}
              >
                <div
                  aria-label="reviews.rating_stars"
                  className="sg-1tckjm8-container ui-shared__rating-stars"
                  data-test-id="ratedStars: 0"
                  role="img"
                >
                  <div
                    className="sg-170uo4n-emptyStars rating-stars-empty"
                  >
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="1"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="2"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="3"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="4"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="5"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                  </div>
                  <div
                    className="sg-8o0m3k-filledStars rating-stars-filled"
                  />
                </div>
              </RatingStars>
              <RatingCount
                count={0}
                prominent={false}
              />
            </Link>
          </AverageRating>
          <div
            className="sg-j878ir-noReviews"
          >
            <Text
              acceptPlainTextWithPlaceholders={false}
              className={null}
              params={{}}
              role={null}
              string="reviews.no_reviews"
              transform={null}
            >
              reviews.no_reviews
            </Text>
            <WriteReviewLink
              productId="foo"
            >
              <div
                className="engage__reviews__write-review-link"
                data-test-id="writeReview"
              >
                <Connect(ButtonLink)
                  aria-label="reviews.button_add"
                  href="/item/666f6f/write_review"
                  noGap={true}
                >
                  <ButtonLink
                    aria-label="reviews.button_add"
                    className=""
                    disabled={false}
                    flat={true}
                    href="/item/666f6f/write_review"
                    navigate={[Function]}
                    noGap={true}
                  >
                    <ActionButton
                      aria-label="reviews.button_add"
                      className=""
                      disableClickDelay={false}
                      disabled={false}
                      flat={true}
                      loading={false}
                      noGap={true}
                      onClick={[Function]}
                      rippleClassName=""
                      rippleSize={null}
                      testId={null}
                      type="secondary"
                      wrapContent={true}
                    >
                      <div
                        className="ui-shared__action-button sg-id1nq4-noGap"
                        data-test-id={null}
                      >
                        <RippleButton
                          aria-label="reviews.button_add"
                          className=""
                          disabled={false}
                          flat={true}
                          onClick={[Function]}
                          rippleClassName=""
                          rippleSize={null}
                          testId="Button"
                          type="secondary"
                          wrapContent={true}
                        >
                          <Button
                            aria-label="reviews.button_add"
                            className=" ui-shared__ripple-button"
                            disabled={false}
                            flat={true}
                            onClick={[Function]}
                            testId="Button"
                            type="secondary"
                            wrapContent={false}
                          >
                            <Button
                              aria-label="reviews.button_add"
                              className="ui-shared__button sg-1uz0bre-button ui-shared__ripple-button"
                              disabled={false}
                              onClick={[Function]}
                              testId="Button"
                            >
                              <button
                                aria-label="reviews.button_add"
                                className="common__button ui-shared__button ui-shared__ripple-button sg-1w8dk5h-root-button"
                                data-test-id="Button"
                                disabled={false}
                                onClick={[Function]}
                              >
                                <Ripple
                                  className="sg-fpa50s-contentWrapper"
                                  color="#000"
                                  disabled={false}
                                  fill={true}
                                  onClick={[Function]}
                                  onComplete={[Function]}
                                  overflow={true}
                                  size={null}
                                >
                                  <div
                                    className="ui-shared__ripple sg-fpa50s-contentWrapper"
                                    data-test-id="Ripple"
                                    onClick={[Function]}
                                    style={null}
                                  >
                                    <Text
                                      acceptPlainTextWithPlaceholders={false}
                                      className={null}
                                      params={{}}
                                      role={null}
                                      string="reviews.button_add"
                                      transform={null}
                                    >
                                      reviews.button_add
                                    </Text>
                                  </div>
                                </Ripple>
                              </button>
                            </Button>
                          </Button>
                        </RippleButton>
                      </div>
                    </ActionButton>
                  </ButtonLink>
                </Connect(ButtonLink)>
              </div>
            </WriteReviewLink>
          </div>
        </div>
      </NoReviews>
    </Header>
  </Connect(Header)>
</Provider>
`;

exports[`<Header /> should render rating summary 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Header)
    productId="foo"
    rating={
      {
        "average": 50,
        "count": 4,
      }
    }
  >
    <Header
      dispatch={[Function]}
      productId="foo"
      rating={
        {
          "average": 50,
          "count": 4,
        }
      }
      withTopGap={false}
    >
      <ReviewsExcerpt
        average={50}
        count={4}
        productId="foo"
        withTopGap={false}
      >
        <div
          className="engage__reviews__reviews-excerpt sg-1p31f2r-container"
          id="reviewsExcerpt"
        >
          <AverageRating
            average={50}
            count={4}
            productId="foo"
          >
            <Link
              className="sg-16m0zyl-container"
              data-test-id="ratedStarsAverage"
              disabled={false}
              href="/item/666f6f/write_review"
              itemProp="item"
              itemScope={true}
              itemType="http://schema.org/Review"
              role="text"
              tagName="a"
            >
              <RatingStars
                className=""
                display="large"
                isSelectable={false}
                onSelection={[Function]}
                value={50}
              >
                <div
                  aria-label="reviews.rating_stars"
                  className="sg-1tckjm8-container ui-shared__rating-stars"
                  data-test-id="ratedStars: 2.5"
                  role="img"
                >
                  <div
                    className="sg-170uo4n-emptyStars rating-stars-empty"
                  >
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="1"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="2"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="3"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="4"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="5"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                  </div>
                  <div
                    className="sg-8o0m3k-filledStars rating-stars-filled"
                  >
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="6"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="7"
                    >
                      <Star
                        size="2.3em"
                      >
                        <Icon
                          content="<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </Star>
                    </div>
                    <div
                      className="sg-1e9cjpt-icon-iconGapLarge"
                      key="2"
                    >
                      <StarHalfIcon
                        size="2.3em"
                      >
                        <Icon
                          content="<defs><path id="a" d="M0 0h24v24H0z"/></defs> <clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath> <path clip-path="ul(#b)" d="M12 2L9.2 8.6 2 9.2 7.5 14l-1.6 7 6.2-3.7m-.1-1.9V6.1m2.8 7.3"/>"
                          size="2.3em"
                        >
                          <svg
                            className="sg-1n8b10t-root common__icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": "<defs><path id="a" d="M0 0h24v24H0z"/></defs> <clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath> <path clip-path="ul(#b)" d="M12 2L9.2 8.6 2 9.2 7.5 14l-1.6 7 6.2-3.7m-.1-1.9V6.1m2.8 7.3"/>",
                              }
                            }
                            style={
                              {
                                "fill": undefined,
                                "fontSize": "2.3em",
                              }
                            }
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </Icon>
                      </StarHalfIcon>
                    </div>
                  </div>
                </div>
              </RatingStars>
              <RatingCount
                count={4}
                prominent={false}
              >
                <Text
                  acceptPlainTextWithPlaceholders={false}
                  className="sg-ee426l-greyStyle engage__reviews__rating-count"
                  params={
                    {
                      "count": 4,
                      "prominent": false,
                    }
                  }
                  role={null}
                  string="reviews.review_count"
                  transform={null}
                >
                  reviews.review_count
                </Text>
              </RatingCount>
            </Link>
          </AverageRating>
          <div
            className="sg-1gye89q-reviewsLine"
          >
            <Text
              acceptPlainTextWithPlaceholders={false}
              className="sg-15ijniw-averageRatingText"
              params={{}}
              role={null}
              string="reviews.rating"
              transform={null}
            >
              reviews.rating
            </Text>
            <WriteReviewLink
              productId="foo"
            >
              <div
                className="engage__reviews__write-review-link"
                data-test-id="writeReview"
              >
                <Connect(ButtonLink)
                  aria-label="reviews.button_add"
                  href="/item/666f6f/write_review"
                  noGap={true}
                >
                  <ButtonLink
                    aria-label="reviews.button_add"
                    className=""
                    disabled={false}
                    flat={true}
                    href="/item/666f6f/write_review"
                    navigate={[Function]}
                    noGap={true}
                  >
                    <ActionButton
                      aria-label="reviews.button_add"
                      className=""
                      disableClickDelay={false}
                      disabled={false}
                      flat={true}
                      loading={false}
                      noGap={true}
                      onClick={[Function]}
                      rippleClassName=""
                      rippleSize={null}
                      testId={null}
                      type="secondary"
                      wrapContent={true}
                    >
                      <div
                        className="ui-shared__action-button sg-id1nq4-noGap"
                        data-test-id={null}
                      >
                        <RippleButton
                          aria-label="reviews.button_add"
                          className=""
                          disabled={false}
                          flat={true}
                          onClick={[Function]}
                          rippleClassName=""
                          rippleSize={null}
                          testId="Button"
                          type="secondary"
                          wrapContent={true}
                        >
                          <Button
                            aria-label="reviews.button_add"
                            className=" ui-shared__ripple-button"
                            disabled={false}
                            flat={true}
                            onClick={[Function]}
                            testId="Button"
                            type="secondary"
                            wrapContent={false}
                          >
                            <Button
                              aria-label="reviews.button_add"
                              className="ui-shared__button sg-1uz0bre-button ui-shared__ripple-button"
                              disabled={false}
                              onClick={[Function]}
                              testId="Button"
                            >
                              <button
                                aria-label="reviews.button_add"
                                className="common__button ui-shared__button ui-shared__ripple-button sg-1w8dk5h-root-button"
                                data-test-id="Button"
                                disabled={false}
                                onClick={[Function]}
                              >
                                <Ripple
                                  className="sg-fpa50s-contentWrapper"
                                  color="#000"
                                  disabled={false}
                                  fill={true}
                                  onClick={[Function]}
                                  onComplete={[Function]}
                                  overflow={true}
                                  size={null}
                                >
                                  <div
                                    className="ui-shared__ripple sg-fpa50s-contentWrapper"
                                    data-test-id="Ripple"
                                    onClick={[Function]}
                                    style={null}
                                  >
                                    <Text
                                      acceptPlainTextWithPlaceholders={false}
                                      className={null}
                                      params={{}}
                                      role={null}
                                      string="reviews.button_add"
                                      transform={null}
                                    >
                                      reviews.button_add
                                    </Text>
                                  </div>
                                </Ripple>
                              </button>
                            </Button>
                          </Button>
                        </RippleButton>
                      </div>
                    </ActionButton>
                  </ButtonLink>
                </Connect(ButtonLink)>
              </div>
            </WriteReviewLink>
          </div>
        </div>
      </ReviewsExcerpt>
    </Header>
  </Connect(Header)>
</Provider>
`;
